<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="625dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds">

        <TextView
            android:id="@+id/item_heading"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/item_details"
            android:textAlignment="center"
            android:textColor="@color/heading_text_color"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/giver_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/lahiru_jayawardhane"
            android:textColor="@color/secondary_color_btn"
            android:textSize="25sp"
            app:drawableLeftCompat="@drawable/baseline_person_24" />

        <TextView
            android:id="@+id/foodType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:drawableLeft="@drawable/food_type"
            android:text="@string/rice_and_curry"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:drawableLeft="@drawable/count"
            android:text="@string/_1_pack"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/description_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/description" />

            <TextView
                android:id="@+id/description_explain"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/i_m_in_basement_canteen_i_have_extra_rice_and_curry_pack_anyone_need_that_come_to_basement"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="80dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/request_btn"
                android:layout_width="10dp"
                android:layout_height="60dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/request"
                />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="10dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/cancel_button"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>