<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primarybutton"


    tools:context=".request">


    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:text="@string/contact"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="358dp"
        android:layout_height="364dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/via_rectangle" />

    <Button
        android:id="@+id/button4"
        android:layout_width="129dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/cancel_btn"
        android:text="@string/cansel"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="255dp"
        android:layout_height="82dp"
        android:layout_marginStart="104dp"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="20dp"
        android:text="@string/whatsapp"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="255dp"
        android:layout_height="82dp"
        android:drawableLeft="@drawable/call"
        android:drawablePadding="20dp"
        android:text="@string/number"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="40dp"
        android:text="+94XXXXXXXXX"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <Button
        android:id="@+id/button3"
        android:layout_width="129dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/confirm_btn"
        android:text="@string/confirm2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
