<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    android:backgroundTint="@color/primarybutton"
    tools:context=".Register2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="92dp"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="304dp"
        android:layout_height="56dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/sbutton"
        android:ems="10"
        android:hint="Enter your name"
        android:inputType="textPersonName"
        android:text="@string/reg_name"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="304dp"
        android:layout_height="56dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/sbutton"
        android:ems="10"
        android:hint="Enter your name"
        android:inputType="textPersonName"
        android:text="@string/reg_email"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="304dp"
        android:layout_height="56dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/sbutton"
        android:ems="10"
        android:hint="Enter your name"
        android:inputType="textPersonName"
        android:text="@string/nic_reg"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="133dp"
        android:layout_height="92dp"
        android:layout_marginStart="139dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_bnw" />

</androidx.constraintlayout.widget.ConstraintLayout>